# monotron

./: .gdbinit  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  enter  memory.x  meson.build  monotron_os.ld  new_monotron_motherboard.md  openocd.cfg  pin map.ods  stm32f0 keyboard controller.ods  upload
.cargo/: config
avr_kb/: README.md  avr-cross.txt  meson.build
avr_kb/keyboard/: keyboard.ino
avr_kb/src/: fake_uart.c  fake_uart.h  keycodes.h  keypress.h  main.c  protocol.h
monotron-api/: Cargo.toml  cbindgen.toml
monotron-api/src/: lib.rs
monotron-io-protocol/: Cargo.toml
monotron-io-protocol/src/: lib.rs
pcb/: .gitignore  Connector_Generic.lib  MCU_Texas.lib  MIDI_IF.sch  Monotron.kicad_pcb  Monotron.lib  Monotron.net  Monotron.pro  Monotron.sch  README.md  atx.scad  expansion.scad  fp-lib-table  mini_itx.dxf  mini_itx.scad  monotron-cache.lib  monotron-rescue.lib  monotron.bom  monotron.kicad_pcb  monotron.pro  monotron.sch  monotron.xml  monotron_bridge.dcm  monotron_bridge.lib  monotron_ps2.sch  monotron_rs232_level_shifter.sch  pcb_shape_example.scad  sym-lib-table  tm4c123g_launchpad.dcm  tm4c123g_launchpad.lib
pcb/Launchpad.pretty/: DP10080.kicad_mod  DP14085.kicad_mod  Launchpad_4x10.kicad_mod  mini-DIN 6.kicad_mod
pcb/Monotron.pretty/: 5749180-1.kicad_mod  D09P13B4PA00LF.kicad_mod  ICD15S13E4GX00LF.kicad_mod  SJ1-3523N.kicad_mod  Stellaris Launchpad Connector.kicad_mod  Tiva-C Launchpad Connector.kicad_mod
pcb/MonotronFootprints.pretty/: 5P180 DIN Socket.kicad_mod
pcb/expansion/: expansion-cache.lib  expansion.kicad_pcb  expansion.sch  sym-lib-table
pcb/gerbers/: monotron-B.Cu.gbr  monotron-B.Mask.gbr  monotron-B.Paste.gbr  monotron-B.SilkS.gbr  monotron-Edge.Cuts.gbr  monotron-F.Cu.gbr  monotron-F.Mask.gbr  monotron-F.Paste.gbr  monotron-F.SilkS.gbr  monotron-NPTH-drl_map.ps  monotron-NPTH.drl  monotron-PTH-drl_map.ps  monotron-PTH.drl  monotron-drl.rpt
pcb/tiva_mcu/: CUI_SJ1-3533NG.igs  bill_of_materials.ods  fp-lib-table  iicd15s13e4gx00lf.igs  sym-lib-table  tivac_mcu-cache.lib  tivac_mcu.kicad_pcb  tivac_mcu.pro  tivac_mcu.sch  tm4c123g_launchpad.lib
rom/: Cargo.toml  build.rs  memory.x
rom/src/: api.rs  main.rs  ui.rs
scripts/: enter  make_api.sh  requirements.txt  upload
src/: api.rs  demos.rs  ferris.rs  main.rs  rexpaint_to_rust.py  rust_logo.rs  ui.rs
src/ui/: mod.rs
stm32_kb/: Cargo.toml  README.md  memory.x
stm32_kb/.cargo/: config
stm32_kb/src/: main.rs
