[package]
name = "monotron"
version = "0.3.2"
authors = ["Jorge Aparicio <jorge@japaric.io>", "Jonathan 'theJPster' Pallant <monotron@thejpster.org.uk>"]
description = "A simple 1980's home computer style application for the Stellaris Launchpad."
keywords = ["arm", "cortex-m", "template", "video", "menu"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thejpster/monotron"

[profile.release]
lto = true
debug = true

[dependencies]

[dependencies.tm4c123x-hal]
version = "0.3.0"
features = ["rt"]
# path = "../tm4c123x-hal"

[dependencies.menu]
git = "https://github.com/thejpster/menu"
# path = "../menu"

[dependencies.vga-framebuffer]
git = "https://github.com/thejpster/vga-framebuffer-rs"
# path = "../vga-framebuffer-rs"

[dependencies.embedded-hal]
version = "0.1.1"
features = ["unproven"]

[dependencies.cortex-m]
version = "0.4.3"

[dependencies.cortex-m-rt]
version = "0.3.15"
features = ["abort-on-panic"]

[dependencies.cortex-m-semihosting]
version = "0.2.0"

[dependencies.pc-keyboard]
path = "../pc-keyboard"
