[package]
name = "monotron"
version = "0.6.0"
authors = ["Jorge Aparicio <jorge@japaric.io>", "Jonathan 'theJPster' Pallant <monotron@thejpster.org.uk>"]
description = "A simple 1980's home computer style application for the Tiva-C Launchpad."
keywords = ["arm", "cortex-m", "template", "video", "menu"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/thejpster/monotron"
edition = "2018"

[[bin]]
name = "monotron"
test = false
bench = false

[profile.release]
lto = true
debug = true
codegen-units = 1
opt-level = "s"

[dependencies.tm4c123x-hal]
version = "0.5.0"
features = ["rt"]
# path = "../tm4c123x-hal"

[dependencies.menu]
version = "0.2.1"
# git = "https://github.com/thejpster/menu"
# path = "../menu"

[dependencies.vga-framebuffer]
version = "0.7.2"
# git = "https://github.com/thejpster/vga-framebuffer-rs"
# path = "../vga-framebuffer-rs"
features = ["const_fn"]

[dependencies.embedded-hal]
version = "0.1.1"
features = ["unproven"]

[dependencies.cortex-m]
version = "0.5.7"

[dependencies.cortex-m-rt]
version = "0.6.1"

[dependencies.panic-halt]
version = "0.2"

[dependencies.pc-keyboard]
version = "0.1.1"

[dependencies.monotron-synth]
# version = "0.1"
# path = "../monotron-synth"
git = "https://github.com/thejpster/monotron-synth"

[dependencies.crc]
version = "1.8.1"
default-features = false

[dependencies.monotron-interface]
# path = "../monotron-interface"
git = "https://github.com/thejpster/monotron-interface"
