[package]
name = "monotron-api"
version = "0.2.1"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "Defines the API between the Monotron ROM and Monotron applications running in RAM."
license-file = "LICENCE"
repository = "https://github.com/thejpster/monotron"

[dependencies]
